--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "my-node-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index1.js",
   "scripts": {
-    "start": "node index.mjs",
-    "dev": "nodemon index.mjs",
+    "start": "node index1.js",
+    "dev": "nodemon index1.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,6 +19,5 @@
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "url": "^0.11.4"
-  },
-  "type": "module"
+  }
 }
